2001-07-07  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* io-gtk.c: Ported from Imlib to GdkPixbuf.

2001-07-05  Christian Rose  <menthos@menthos.com>

	* freecell.desktop: Modified Swedish entries.

2001-06-09  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* io-gtk.c (to_destination_auto): set stalled = 1 also when the
	  game was won, fix bug #15637.

	* score.c (score_add_lose): Apply patch from tbspit@eng.um.edu.mt
	  bug #52045.

2000-11-26  Stanislav Brabec  <utx@penguin.cz>

	* freecell.desktop: Fixed Czech translation.
			
2000-05-12  Andreas Hyden  <a.hyden@cyberpoint.se>

	* freecell.desktop: Added Swedish translation.

2000-05-09  Martin Baulig  <baulig@suse.de>

	* freecell.c (main): Call gnome_score_init () to fix security
	exploit to group games.

1999-07-08  Ian Peters  <itp@gnu.org>

	* io-gtk.c, game.c: Finally fix for good and dead anything related to
	the history, undo, dumping core when you win, clicking yes to a new
	game, etc etc.  I think... :-)  Special thanks to my Debian maintainer
	for helpful patches.  (closes: #1076, #1179, #1430)

1999-04-16  Ian Peters  <itp@gnu.org>

	* io-gtk.c: Fix bug 807 (Freecell dumps core if you win), thanks to
	Ainsley Pereira for the fix.

1999-03-12  Ian Peters  <itp@gnu.org>

	* io-gtk.c: Kill the history once you win, so that you can't undo and
	then win all over again.

1999-03-12  Ian Peters  <itp@gnu.org>

	* io-gtk.c: Added a global mb variable, checks for duplicate dialogs
	from the exit, restart, and new functions.

1999-03-11  Ian Peters  <itp@gnu.org>

	* io-gtk.c: Added lots of calls to gnome_dialog_set_parent.  Some
	dialogs were modal that didn't need to be, fixed.  Spelling
	corrections.  Stopped setting dialog's position, as this is set
	globally for GNOME in a capplet.

	* menu.c: Removed .'s from the tooltips on the toolbar.  Cleaned up
	some of the tooltips/menuitems.  Made the "New with seed" menu and
	toolbar pixmaps consistant.
