@@ -1,5 +1,12 @@
 2001-07-07  Juan Pablo Mendoza <pablo_juan@yahoo.com>
 
+	* io-gtk.c (callback_dialog_destroyed): New function.
+	  (callback_restart), (callback_new_with_seed), (callback_new),
+	  (callback_exit): Fix a bug when the Exit this game? dialog comes
+	  up and the you pressed esc the dialog don't show any more.
+
+2001-07-07  Juan Pablo Mendoza <pablo_juan@yahoo.com>
+
 	* io-gtk.c: Ported from Imlib to GdkPixbuf.
 
 2001-07-05  Christian Rose  <menthos@menthos.com>
